ditambahkan SimpleXMLRequest untuk adapter request xml dengan menggunakan volley u/ request dan parsing xml menggunakan simpleframwork:xml, ditambahkan logo bank pada sedekah online

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.laskarsedekah.laskarsedekah">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".About"
+            android:name=".NavMenu.About"
             android:label="@string/title_activity_about"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -27,6 +28,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.laskarsedekah.laskarsedekah.MainActivity" />
         </activity>
+
+
     </application>
 
 </manifest>
